# skilleval

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  QUICK_START.md  README.md  SETUP_GUIDE.md  evaluate_skill.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
docs/architecture/: MULTI_PROVIDER_GUIDE.md  PHASE1_PHASE2_ARCHITECTURE.md
examples/csv-analyzer/: SKILL.md
examples/csv-analyzer/evals/: evals.json
reports/: README.md
scripts/: analyze_results.py  analyze_traces.py  detailed_report.py  enhanced_report.py  show_config.py  test_agent_harness.py  test_multi_provider.py  test_new_frameworks.py
src/skilleval/: __init__.py  cli.py  config.py  models.py  models_phase1.py  models_phase2.py  orchestrator.py
src/skilleval/pillars/: __init__.py  harness.py  mlsec_top10.py  nist_ai_rmf.py  owasp_agentic.py  owasp_llm.py  quality.py  security.py  static_tests.py
src/skilleval/scorers/: __init__.py  dual_score_reporter.py  harness_scorer.py  phase1_orchestrator.py  security_scorer.py  static_scorer.py
src/skilleval/utils/: agent_executor.py  ast_analyzer.py  complexity_analyzer.py  concurrency_analyzer.py  container_executor.py  cve_scanner.py  env_config.py  html_report.py  llm_optimizer.py  logger.py  multi_provider_agent.py  resource_analyzer.py  skill_loader.py  trace_analytics.py
tests/: conftest.py  test_harness_pillar.py  test_integration.py  test_security_pillar.py  test_static_pillar.py
